feat: implement invoice (#15)
* feat: implement invoice
