# src/routes/store.route.ts
@@ -3,7 +3,7 @@ import { Routes } from "../interfaces/routes.interface.js";
 import { StoreController } from "../controllers/store.controller.js";
 import { AuthMiddleware } from "../middlewares/auth.middleware.js";
 import { ValidationMiddleware } from "../middlewares/validation.middleware.js";
-import { updateCartDTO, updateProdDTO } from "../dtos/store.dto.js";
+import { invoiceDTO, updateCartDTO, updateProdDTO } from "../dtos/store.dto.js";
 import { upload } from "../config/index.js";
 
 export class StoreRoute implements Routes {
@@ -18,6 +18,8 @@ export class StoreRoute implements Routes {
   private initializeRoutes() {
     this.router.get(`${this.path}`, this.user.getProds);
     this.router.get(`${this.path}/cart`, AuthMiddleware, this.user.getCart);
+    this.router.get(`${this.path}/invoice`, AuthMiddleware, this.user.getInvoices);
+    this.router.get(`${this.path}/invoice/:id`, AuthMiddleware, this.user.getInvoiceByID);
     this.router.get(`${this.path}/:id`, AuthMiddleware, this.user.getByID);
     this.router.post(
       `${this.path}/create`,
@@ -39,5 +41,18 @@ export class StoreRoute implements Routes {
       this.user.updateCart,
     );
     this.router.delete(`${this.path}/cart/:id/delete`, AuthMiddleware, this.user.delQtyProd);
+    this.router.post(
+      `${this.path}/invoice/create`,
+      AuthMiddleware,
+      ValidationMiddleware(invoiceDTO, true, true),
+      this.user.createInvoice,
+    );
+    this.router.put(
+      `${this.path}/invoice/:id/update`,
+      AuthMiddleware,
+      ValidationMiddleware(invoiceDTO, true, true),
+      this.user.editInvoice,
+    );
+    this.router.delete(`${this.path}/invoice/:id/delete`, AuthMiddleware, this.user.delInvoice);
   }
 }
